--- a/hex.html
+++ b/hex.html
@@ -20,7 +20,7 @@
     <main>
         <div class="container">
             <h2>Background Color : <span class="color">#FFFFFF</span></h2>
-            <button class="btn btn-hero" id="btn">Click me</button>
+            <button class="btn" id="btn">Click me</button>
         </div>
     </main>
 
