--- a/names.html
+++ b/names.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Color Flipper</title>
+    <title>Colors</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
         <div class="nav-center">
-            <h4>Color Flipper</h4>
+            <h4>Colorcode</h4>
             <ul class="nav-links">
-                <li><a href="index.html">Simple</a></li>
-                <li><a href="hex.html">Hex</a></li>
+                <li><a href="index.html">Hex</a></li>
+                <li><a href="names.html">Names</a></li>
             </ul>
         </div>
     </nav>
@@ -20,10 +20,10 @@
     <main>
         <div class="container">
             <h2>Background Color : <span class="color">#FFFFFF</span></h2>
-            <button class="btn" id="btn">Click me</button>
+            <button class="btn" id="btn">Change Color</button>
         </div>
     </main>
 
-    <script src="hex.js"></script>
+    <script src="name.js"></script>
 </body>
 </html>
